<resources>
    <string name="pwd_format">0123456789qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM!@_.</string>
    <string name="security_pwd_format">0123456789</string>
    <string name="verification_code_format">0123456789qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="invite_code_format">0123456789qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="app_name">百盟优品</string>
    <string name="home_page">首页</string>
    <string name="online_shopping">网购</string>
    <string name="fun_shopping">乐购</string>
    <string name="mine">我的</string>
    <string name="scan_or">扫码</string>
    <string name="payment">付款</string>
    <string name="proceeds">收款</string>
    <string name="recharge">充值</string>
    <string name="buy_card">购买卡</string>
    <string name="card_bag">卡包</string>
    <string name="transfer">转账</string>
    <string name="social_circle">社交圈</string>
    <string name="recommended">推荐</string>
    <string name="location_error">定位失败</string>
    <string name="today_recommended">今日推荐</string>
    <string name="near_store">附近门店</string>
    <string name="login">登陆</string>
    <string name="generate_or">生成二维码</string>
    <string name="upgrade_membership">升级会员</string>
    <string name="mine_wallet">我的钱包</string>
    <string name="integral_account">积分账户</string>
    <string name="bill">账单</string>
    <string name="shipping_address">收货地址</string>
    <string name="terms_of_service">服务条款</string>
    <string name="factor">代理商</string>
    <string name="setting">设置</string>
    <string name="scan_or_hint">请将二维码放入框中</string>
    <string name="recharge_sum">充值金额</string>
    <string name="recharge_hint">请输入充值金额</string>
    <string name="payment_hint">请输入付款金额</string>
    <string name="method_of_payment">支付方式</string>
    <string name="method_of_buy">购买方式</string>
    <string name="recharge_desc">*每充值1元，平台将赠送给您100积分</string>
    <string name="method_of_payment_alipay">支付宝账户</string>
    <string name="method_of_payment_wechat">微信账户</string>
    <string name="bank_card">银行卡</string>
    <string name="transfer_method">转账方式</string>
    <string name="baimeng_wallet">百盟钱包</string>
    <string name="merchants_wallet">商户钱包</string>
    <string name="vip_wallet">会员钱包</string>
    <string name="transfer_record">转账记录</string>
    <string name="payment_to_personal">付款给个人</string>
    <string name="nickname">昵称：</string>
    <string name="payment_amount">付款金额</string>
    <string name="immediate_payment">立即支付</string>
    <string name="set_amount">设置金额</string>
    <string name="save_pic">保存图片</string>
    <string name="draw_money">提现</string>
    <string name="financial_details">资金明细</string>
    <string name="convert_coupon">兑换卡券</string>
    <string name="mall_total">商城积分</string>
    <string name="wait_active_total">待激活积分</string>
    <string name="integral_subsidiary">积分明细</string>
    <string name="expense_detail">· 消费明细</string>
    <string name="points_mall_details">· 积分商城明细</string>
    <string name="wallet_details">· 钱包明细</string>
    <string name="draw_money_details">· 提现明细</string>
    <string name="merchants_details">· 商户明细</string>
    <string name="collection_details">· 收款明细</string>
    <string name="recharge_details">· 充值明细</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="registered_users">注册用户</string>
    <string name="choose_other_login_method">使用其它账号登录</string>
    <string name="registered">注册</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="please_input_phone_num">请输入手机号</string>
    <string name="please_input_new_phone_num">请输入新的手机号</string>
    <string name="please_input_current_phone_num">请输入当前手机号</string>
    <string name="please_select_city">请选择所在省市区</string>
    <string name="please_select_area">请选择所在区域</string>
    <string name="please_input_detail_location">请输入详细地址</string>
    <string name="please_input_real_name">请输入真实姓名</string>
    <string name="please_input_idcard_num">请输入身份证号</string>
    <string name="idcard_num">身份证号</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="please_input_new_pwd">请输入新密码</string>
    <string name="please_input_new_pwd_again">请再次输入新密码</string>
    <string name="please_verification_code">请输入验证码</string>
    <string name="verification_code">验证码</string>
    <string name="please_invite_code">邀请码(非必填)</string>
    <string name="please_select_agency_level">请选择代理级别</string>
    <string name="please_select_agency_area">请选择代理区域</string>
    <string name="registered_show_agree">点击注册代表同意</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="existing_account">已有账号，</string>
    <string name="retrieve_login_password">找回登陆密码</string>
    <string name="setting_pay_password">设置支付密码</string>
    <string name="emptyView_mode_desc_fail_title">加载失败</string>
    <string name="emptyView_mode_desc_fail_desc">请检测网络是否能正常连接</string>
    <string name="emptyView_mode_desc_retry">点击重试</string>
    <string name="retrieve_password">找回登陆密码</string>
    <string name="bind_new_moible">绑定新手机号</string>
    <string name="buy_success">购买成功</string>
    <string name="buy_failure">购买失败</string>
    <string name="RNB">￥</string>
    <string name="scratch_hint">刮开涂层，查看倍数</string>
    <string name="save_to_card_bag">保存到卡包</string>
    <string name="logining">正在登陆</string>
    <string name="num_pwd_not_empty">账号和密码不能为空</string>
    <string name="input_correct_phone_num">请输入正确手机号码</string>
    <string name="pwd_length_short">密码长度至少6位</string>
    <string name="binding_information">信息绑定</string>
    <string name="china_phone_code">+86</string>
    <string name="binding">绑定</string>
    <string name="save">保存</string>
    <string name="person_info">个人信息</string>
    <string name="head">头像</string>
    <string name="nick_name">昵称</string>
    <string name="member_num">会员号</string>
    <string name="sex">性别</string>
    <string name="born_data">出生日期</string>
    <string name="not_add_address">您还没有添加地址</string>
    <string name="not_add_bank">您暂时还没有银行卡</string>
    <string name="go_add">去添加</string>
    <string name="add">添加</string>
    <string name="generate_share">生成海报</string>
    <string name="shipping_addr_manager">收货地址管理</string>
    <string name="bank_card_manager">银行卡管理</string>
    <string name="addr_info">地址信息</string>
    <string name="set_default_addr">设为默认地址</string>
    <string name="default_addr">默认地址</string>
    <string name="name">姓名</string>
    <string name="phone_num">手机号码</string>
    <string name="province_city_area">省份、城市、区县</string>
    <string name="default_addr_street">详细地址，如街道、楼牌号等</string>
    <string name="add_address">新增地址</string>
    <string name="add_bank_card">添加银行卡</string>
    <string name="editor">编辑</string>
    <string name="del">删除</string>
    <string name="bankcard_info">银行卡信息</string>
    <string name="cardholder_name">持卡人姓名</string>
    <string name="bank_card_num">银行卡号</string>
    <string name="opening_bank">开户行</string>
    <string name="language_switch">语言切换</string>
    <string name="simplified_chinese">简体中文</string>
    <string name="function_not_open">很抱歉，功能未开放</string>
    <string name="person_info_manager">个人信息管理</string>
    <string name="account_manager">账号管理</string>
    <string name="pwd_manager">密码管理</string>
    <string name="switch_account">切换账号</string>
    <string name="exit">退出</string>
    <string name="change_login_password">修改登录密码</string>
    <string name="change_payment_password">修改支付密码</string>
    <string name="retrieve_payment_password">找回支付密码</string>
    <string name="confirm_switch">确定切换</string>
    <string name="mobile">手机</string>
    <string name="wechat">微信</string>
    <string name="alipay">支付宝</string>
    <string name="agency">代理</string>
    <string name="not_join_agency">您尚未加入代理计划</string>
    <string name="apply_to_join">申请加入</string>
    <string name="apply_now">立即申请</string>
    <string name="where_area">所在区域</string>
    <string name="agent_level">代理级别</string>
    <string name="agent_area">代理区域</string>
    <string name="have_no_fans">您还没有粉丝哦</string>
    <string name="my_posters">我的海报</string>
    <string name="find_back">找回</string>
    <string name="modify_nick_name">修改昵称</string>
    <string name="please_input_old_pwd">请输入旧密码</string>
    <string name="confirm_modify">确认修改</string>
    <string name="confirm">确认</string>
    <string name="check_phone_num">验证手机号</string>
    <string name="service_mobile">400 100 1111</string>
    <string name="connect_time_out">连接超时，请重试</string>
    <string name="service_not_response">服务器无响应，请重试</string>
</resources>

