<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handlers"
            type="com.yueke.app.bmyp.activitys.ForgotLoginPwdActivity" />

        <variable
            name="pageData"
            type="com.askia.coremodel.viewmodel.ForgotLoginPwdViewModel.PageData" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <com.qmuiteam.qmui.widget.QMUITopBar
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/qmui_topbar_height"
            android:paddingLeft="@dimen/dp_20"
            app:qmui_topbar_bg_color="@color/white"
            app:qmui_topbar_image_btn_height="@dimen/dp_21"
            app:qmui_topbar_image_btn_width="@dimen/dp_22"
            app:qmui_topbar_left_back_drawable_id="@drawable/icon_back"
            app:qmui_topbar_separator_color="@color/transparent"
            app:qmui_topbar_title_color="@color/black"
            app:qmui_topbar_title_text_size="@dimen/sp_18" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:paddingBottom="@dimen/dp_10"
                android:paddingTop="@dimen/dp_25"
                android:text="@string/retrieve_password"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_23"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_55"
                    android:enabled="false"
                    android:gravity="bottom"
                    android:text="@string/china_phone_code"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

                <com.nanchen.bankcardutil.ContentWithSpaceEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_55"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:background="@null"
                    android:gravity="bottom"
                    android:hint="@string/please_input_phone_num"
                    android:onTextChanged="@{handlers::mobileNumEdittextChanged}"
                    android:text="@={pageData.phoneNum}"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/editttext_cursor"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@color/lighter_gray" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:digits="@string/verification_code_format"
                    android:gravity="bottom"
                    android:hint="@string/please_verification_code"
                    android:maxLength="8"
                    android:maxLines="1"
                    android:onTextChanged="@{handlers::verificationCodeEdittextChanged}"
                    android:text="@={pageData.verificationCode}"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/editttext_cursor"
                    android:textSize="@dimen/sp_14" />

                <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
                    android:id="@+id/bt_getVerificationCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:background="@drawable/radius_bg_selectcolor"
                    android:enabled="@{pageData.phoneNum.length == 13?true:false}"
                    android:gravity="bottom"
                    android:onClick="@{handlers::getVerificationCode}"
                    android:paddingBottom="@dimen/dp_5"
                    android:paddingLeft="@dimen/dp_8"
                    android:paddingRight="@dimen/dp_8"
                    android:paddingTop="@dimen/dp_5"
                    android:text="@string/get_verification_code"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_12" />


                <TextView
                    android:id="@+id/tv_countdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:background="@drawable/radius_text_bg"
                    android:enabled="false"
                    android:gravity="bottom"
                    android:paddingBottom="@dimen/dp_2"
                    android:paddingLeft="@dimen/dp_5"
                    android:paddingRight="@dimen/dp_5"
                    android:paddingTop="@dimen/dp_2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_12"
                    android:visibility="gone" />

            </FrameLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@color/lighter_gray" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55">

                <EditText
                    android:id="@+id/pwd_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:digits="@string/pwd_format"
                    android:gravity="bottom"
                    android:hint="@string/please_input_new_pwd"
                    android:inputType="textWebPassword"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:onTextChanged="@{handlers::userPwdEdittextChanged}"
                    android:text="@={pageData.newPassWord}"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/editttext_cursor"
                    android:textSize="@dimen/sp_14" />


                <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
                    android:id="@+id/bt_showPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:gravity="bottom"
                    android:onClick="@{handlers::showPwd}"
                    android:paddingLeft="@dimen/dp_10"
                    android:text="显示"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14"
                    android:visibility="@{pageData.newPassWord.length>0 ? 0:8}" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@color/lighter_gray" />

            <com.qmuiteam.qmui.alpha.QMUIAlphaButton
                android:id="@+id/bt_confirm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_30"
                android:background="@drawable/gradient_radius_selectcolor"
                android:enabled="false"
                android:onClick="@{handlers::doFindBack}"
                android:text="@string/find_back"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

</layout>