<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handlers"
            type="com.yueke.app.bmyp.activitys.ModifySecurityPwdActivity" />

        <variable
            name="pageData"
            type="com.askia.coremodel.viewmodel.ModifySecurityPwdViewModel.PageData" />


    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true">

        <com.qmuiteam.qmui.widget.QMUITopBar
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/qmui_topbar_height"
            android:paddingLeft="@dimen/dp_20"
            app:qmui_topbar_bg_color="@color/white"
            app:qmui_topbar_image_btn_height="@dimen/dp_21"
            app:qmui_topbar_image_btn_width="@dimen/dp_22"
            app:qmui_topbar_left_back_drawable_id="@drawable/icon_back"
            app:qmui_topbar_separator_color="@color/transparent"
            app:qmui_topbar_title_color="@color/black"
            app:qmui_topbar_title_text_size="@dimen/sp_18" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/qmui_topbar_height"
            android:background="@color/line_color"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="@dimen/dp_8"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44"
                    android:background="@null"
                    android:digits="@string/security_pwd_format"
                    android:gravity="bottom"
                    android:hint="@string/please_input_old_pwd"
                    android:inputType="numberPassword"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:onTextChanged="@{handlers::userOldPwdEdittextChanged}"
                    android:text="@={pageData.oldPassWord}"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/editttext_cursor"
                    android:textSize="@dimen/sp_14" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="@dimen/dp_8"
                    android:background="@color/lighter_gray" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44"
                    android:background="@null"
                    android:digits="@string/security_pwd_format"
                    android:gravity="bottom"
                    android:hint="@string/please_input_new_pwd"
                    android:inputType="numberPassword"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:onTextChanged="@{handlers::userNewPwdEdittextChanged}"
                    android:text="@={pageData.newPassWord}"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/editttext_cursor"
                    android:textSize="@dimen/sp_14" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="@dimen/dp_8"
                    android:background="@color/lighter_gray" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44"
                    android:background="@null"
                    android:digits="@string/security_pwd_format"
                    android:gravity="bottom"
                    android:hint="@string/please_input_new_pwd_again"
                    android:inputType="numberPassword"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:onTextChanged="@{handlers::userConfirmPwdEdittextChanged}"
                    android:text="@={pageData.confirmPwd}"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/editttext_cursor"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>


            <com.qmuiteam.qmui.alpha.QMUIAlphaButton
                android:id="@+id/bt_confirm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_30"
                android:background="@drawable/gradient_radius_selectcolor"
                android:enabled="false"
                android:onClick="@{handlers::doConfirmModify}"
                android:text="@string/confirm_modify"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18" />


        </LinearLayout>

    </FrameLayout>

</layout>